fix: Adjust button position in admin product styles for better alignment

--- a/src/styles/admin-styles/_products.scss
+++ b/src/styles/admin-styles/_products.scss
@@ -29,7 +29,7 @@
   cursor: pointer;
   border: none;
   position: absolute;
-  top: 3.5rem;
+  top: 4rem;
   right: 12rem;
   z-index: 1;
 }
